<resources>
    <string name="app_name">Clockly</string>

    <string name="add_alarm_button_content_description">Добавить будильник</string>
    <string name="alarm_button_content_description">Будильник</string>
    <string name="stopwatch_button_content_description">Секундомер</string>
    <string name="weather_button_content_description">Погода</string>
    <string name="cancel_button_content_description">Отменить</string>
    <string name="save_button_content_description">Сохранить</string>

    <string name="chip_monday_content_description">Понедельник</string>
    <string name="chip_tuesday_content_description">Вторник</string>
    <string name="chip_wednesday_content_description">Среда</string>
    <string name="chip_thursday_content_description">Четверг</string>
    <string name="chip_friday_content_description">Пятница</string>
    <string name="chip_saturday_content_description">Суббота</string>
    <string name="chip_sunday_content_description">Воскресенье</string>

    <string name="alarm_notification">Будильник в %s</string>
    <string name="button_alarm_notification">Остановить</string>
    <string name="channel_name_alarm_notification">Будильник</string>

    <string name="add_alarm_title">Новый будильник</string>
    <string name="edit_alarm_title">Изменить будильник</string>

    <string name="repetition_days_one_time_alarm">Одиночный будильник</string>
    <string name="repetition_days_every_day_alarm">Каждый день</string>
    <string name="repetition_days_monday">Пн</string>
    <string name="repetition_days_tuesday">Вт</string>
    <string name="repetition_days_wednesday">Ср</string>
    <string name="repetition_days_thursday">Чт</string>
    <string name="repetition_days_friday">Пт</string>
    <string name="repetition_days_saturday">Сб</string>
    <string name="repetition_days_sunday">Вс</string>

    <string name="chip_repeating_alarm">Повторяющийся будильник</string>

    <string name="days_of_week_alarm_repeat">Повтор</string>

    <string name="chip_monday">П</string>
    <string name="chip_tuesday">В</string>
    <string name="chip_wednesday">С</string>
    <string name="chip_thursday">Ч</string>
    <string name="chip_friday">П</string>
    <string name="chip_saturday">С</string>
    <string name="chip_sunday">В</string>

    <string name="hint_hours">Часы</string>
    <string name="hint_minutes">Минуты</string>

    <string name="snackbar_message">Разрешите отправку уведомлений для корректной работы приложения</string>
    <string name="snackbar_action">Настройки</string>

    <string name="empty_alarms">Нет установленных будильников</string>
    <string name="time_to_alarm">Будильник через %s</string>

    <string name="day_singular_number">день</string>
    <string name="day_plural_number">дней</string>
    <string name="day_other_number">дня</string>

    <string name="hour_singular_number">час</string>
    <string name="hour_plural_number">часов</string>
    <string name="hour_other_number">часа</string>

    <string name="minute_singular_number">минуту</string>
    <string name="minute_plural_number">минут</string>
    <string name="minute_other_number">минуты</string>

    <string-array name="day_declination">
        <item>@string/day_singular_number</item>
        <item>@string/day_plural_number</item>
        <item>@string/day_other_number</item>
    </string-array>

    <string-array name="hour_declination">
        <item>@string/hour_singular_number</item>
        <item>@string/hour_plural_number</item>
        <item>@string/hour_other_number</item>
    </string-array>

    <string-array name="minute_declination">
        <item>@string/minute_singular_number</item>
        <item>@string/minute_plural_number</item>
        <item>@string/minute_other_number</item>
    </string-array>
</resources>